# toxoidv2_experiments

./: .gitmodules  Cargo.toml  Makefile  Makefile_old  README.md  package-lock.json  package.json  rustver.txt
app/api_test/: Cargo.toml
app/api_test/src/: bindings.rs  lib.rs
app/api_test/wit/: world.wit
app/guest/: Cargo.toml
app/guest/src/: bindings.rs  components.rs  entities.rs  lib.rs  lib_example.rs  systems.rs
app/guest/src/api/: mod.rs
app/guest/wit/: world.wit
app/host/: Cargo.toml
app/host/src/: main.rs
app/macro_test/: Cargo.toml  macro.rs
app/macro_test/src/: main.rs
crates/DD/: README.md  build.rs
crates/toxoid_api/: Cargo.toml  README.md
crates/toxoid_api/src/: bindings.rs  components.rs  lib.rs  main.rs
crates/toxoid_api/wit/: world.wit
crates/toxoid_api_macro/src/: lib.rs
crates/toxoid_bootstrap/: Cargo.toml
crates/toxoid_bootstrap/src/: entities.rs  game_loop.rs  input.rs  lib.rs  renderer.rs  sokol.rs  systems.rs  watch.rs
crates/toxoid_cli/: Cargo.toml
crates/toxoid_cli/src/: main.rs
crates/toxoid_engine/: Cargo.toml
crates/toxoid_engine/src/: bindings.rs  lib.rs
crates/toxoid_engine/wit/: world.wit
crates/toxoid_engine/wit/template/: world.wit
crates/toxoid_flecs/: Cargo.toml  Makefile  build.rs  flecs.c  flecs.h
crates/toxoid_flecs/src/: bindings.rs  bindings_x64.rs  lib.rs
crates/toxoid_guest/src/: bindings.rs
crates/toxoid_guest/wit/: world.wit
crates/toxoid_host/: Cargo.toml  README.md
crates/toxoid_host/src/: bindings.rs  lib.rs
crates/toxoid_host/wit/: world.wit
crates/toxoid_host/wit/template/: world.wit
crates/toxoid_runtime/: Cargo.toml
crates/toxoid_runtime/src/: lib.rs  main_old.rs
crates/toxoid_sokol/: Cargo.toml  build.rs
crates/toxoid_sokol/src/: bindings.rs  lib.rs  main.rs  render_2d.rs
crates/toxoid_wasm/: Cargo.toml  toxoid_api.wasm
crates/toxoid_wasm/src/: main.rs
crates/toxoid_wasm_component/: Cargo.toml  build_old.rs
crates/toxoid_wasm_component/src/: bindings.rs  lib.rs
crates/toxoid_wasm_component/wit/: world.wit
crates/toxoid_wasm_runtime/: Cargo.toml  macro.rs
crates/toxoid_wasm_runtime/femark-wasi/: index.html  toxoid_api.d.ts  toxoid_api.js
crates/toxoid_wasm_runtime/femark-wasi/interfaces/: toxoid-api-ecs.d.ts  wasi-filesystem-types.d.ts
crates/toxoid_wasm_runtime/src/: lib.rs  main.rs  main_old.rs
crates_old/native_component/: Cargo.toml
crates_old/native_component/src/: main.rs
crates_old/notan_example/: Cargo.toml
crates_old/notan_example/src/: main.rs
crates_old/toxoid_api/: Cargo.toml
crates_old/toxoid_api/src/: bindings.rs
crates_old/toxoid_flecs/: Cargo.toml
crates_old/toxoid_flecs/src/: lib.rs
crates_old/toxoid_wasm_component/wit/: world.wit
crates_old/toxoid_wasm_runtime/: Cargo.toml
crates_old/toxoid_wasm_runtime/src/: main.rs
notes/: bindings_design.md  target_differences.md
