[workspace]
members = [      
     "crates/toxoid_cli",
     "crates/toxoid_wasm_runtime",
     "crates/toxoid_wasm_component",
     "crates/toxoid_api"
]
exclude = [
     "crates_old/toxoid_api", 
     "crates_old/toxoid_flecs", 
     "crates_old/toxoid_wasm_runtime",
     "crates_old/toxoid_wasm_component", 
     "crates_old/notan_example",
     "crates_old/native_component"
]
