[workspace]
name = "toxoid_app"
members = [      
     "crates/toxoid_cli",
     "crates/toxoid_wasm_runtime",
     "crates/toxoid_wasm_component",
     "crates/toxoid_api", 
     "crates/toxoid_host",
     "crates/toxoid_sokol",
     "app/host", 
     "app/guest", "app/api_test",
]
exclude = [
     "app/api_test",
]
