[package]
name = "api_test"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.36.0", features = ["bitflags"] }
toxoid_wasm_component = { path = "../../crates/toxoid_wasm_component" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:api-test"

[package.metadata.component.dependencies]
