[package]
name = "toxoid_api"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
toxoid_wasm_component = { path = "../toxoid_wasm_component" }

# WASM32 dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]


# Native dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toxoid_engine = { path = "../toxoid_engine" }