[package]
name = "toxoid_bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
toxoid_api = { path = "../toxoid_api" }

[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toxoid_runtime = { path = "../toxoid_runtime" }
toxoid_host = { path = "../toxoid_host" }